@@ -254,7 +254,7 @@ sub _writeSOGoConfFile
     my $retrievalServices = $mail->model('RetrievalServices');
     my $sieveEnabled = $retrievalServices->value('managesieve');
     my $sieveServer = ($sieveEnabled ? 'sieve://127.0.0.1:4190' : '');
-    my $imapServer = '127.0.0.1:143';
+    my $imapServer = ($mail->imap() ? '127.0.0.1:143' : 'imaps://127.0.0.1:993');
     my $smtpServer = '127.0.0.1:25';
     push (@{$array}, imapServer => $imapServer);
     push (@{$array}, smtpServer => $smtpServer);
